# segment-reshape-qgis-plugin

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  segment-reshape.code-workspace  setup.cfg  whitelist.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-style.yml  draft-release.yml  release.yml  tests.yml
.github/workflows/draft-release/: extract-changes.py  set-version-post0.py  set-version.py
src/segment_reshape/: __init__.py
src/segment_reshape/geometry/: replace_segment.py  reshape.py
src/segment_reshape/map_tool/: segment_reshape_tool.py
src/segment_reshape/topology/: find_related.py
src/segment_reshape/utils/: __init__.py  geometry_utils.py
src/segment_reshape_plugin/: __init__.py  metadata.txt  plugin.py
src/segment_reshape_plugin/resources/i18n/: fi.qm  fi.ts
test/: conftest.py
test/geometry/: __init__.py  test_replace_segment.py  test_reshape.py
test/integration/: test_multiple_polygons_reshaped.py  test_polygon_border_reshaped.py  test_polygon_hole_reshaped.py  test_simple_line_reshape.py
test/map_tool/: test_segment_reshape_tool.py
test/plugin/: test_plugin.py
test/topology/: test_find_related.py
test/utils/: test_geometry_utils.py
