[metadata]
name = segment-reshape-qgis-plugin
version = attr: segment_reshape.__version__
url = https://github.com/nlsfi/segment-reshape-qgis-plugin
project_urls =
    Changelog = https://github.com/nlsfi/segment-reshape-qgis-plugin/blob/main/CHANGELOG.md
author = National Land Survey of Finland
author_email = eero.hietanen@maanmittauslaitos.fi
# maintainer =
# maintainer_email =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Typing :: Typed
license = GNU GPL v3.0
description = QGIS plugin with a map tool to reshape a continuous segment topogically.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    qgis

[options]
python_requires = >=3.8
zip_safe = False
packages = find:
package_dir =
    = src
install_requires =
    qgis_plugin_tools>=0.2.0

[options.packages.find]
where = src

[options.package_data]
segment_reshape =
    py.typed
segment_reshape_plugin =
    metadata.txt
    py.typed

[options.entry_points]
qgis_plugin_dev_tools =
    segment_reshape_plugin=segment_reshape_plugin
